# random-viz

./: .gitignore  EU-cyber.r  Manifest.toml  Project.toml  README.md  dnd-viz.md  eu-cyber.md  pyproject.toml  util.py  viz.jl
data/: data-cyber.xlsx  electricity-nps-price_20250801.csv  electricity-nps2024.csv
human-degree-separation-recognition/: README.md  analyze.R  processed_angle_data.csv  results-0.2deg.json
rocket/: README.md  debug_tools.py  params.py  rocket_sim_jax.py  rocket_traj.parquet
rocket/viz/: README.md  index.html  main.js  parsers.js  plots.js  styles.css  threeview.js
sandbattery/: README.md  sand_battery.js  sand_battery.py  sand_battery2.py  test_sand_battery.py
