[project]
name = "random-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffrax>=0.7.0",
    "jax>=0.7.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pint>=0.24.4",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
